--- a/SharpClipboard/SharpClipboard.csproj
+++ b/SharpClipboard/SharpClipboard.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <RootNamespace>WK.Libraries.SharpClipboardNS</RootNamespace>
-    <TargetFrameworks>netcoreapp3.0;net20</TargetFrameworks>
+    <TargetFrameworks>net7.0-windows</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
